[project]
name = "example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.15.7",
]

[project.scripts]
start = "main:main"

[tool.uv]
package = true 

[tool.ruff]
exclude = [
    "uv.lock",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.format]
exclude = ["uv.lock"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
