[project]
name = "billsone"
version = "0.1.0"
description = "Billing Storage and Retreival System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "ruff>=0.15.7",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]

[project.scripts]
start = "app.main:main"

[tool.uv]
package = true 

[tool.ruff]
exclude = [
    "uv.lock",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.format]
exclude = ["uv.lock"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
